2022-11-18: [FEATURE] Add ability to draw border on `PopupSlider` controls
2022-11-18: [FEATURE] Add `ExtendedPopupMixin` to simplify adding popups to widgets
2022-11-18: [FEATURE] Add `MenuMixin` and `DBusMenuMixin` to standardise approach to widget menus
2022-11-17: [FEATURE] Add HTTPDigest authentication to `TVHWidget`
2022-11-13: [FEATURE] Add ability to update popup control values
2022-11-12: [BUGFIX] Fix menu bug in `GlobalMenu`
2022-11-12: [FEATURE] `PopupImage` can display an alternative image as a highlight
2022-11-12: [BUGFIX] Fix away goal and red card indicator locations when using `PowerLineDecoration`
2022-11-12: [BUGFIX] More fixes to decorations on mirrored widgets
2022-11-12: [BUGFIX] More `RectDecoration` clipping fixes
2022-11-12: [FEATURE] Add ability to set position of popup relative to corners, midpoints and centre of screen
2022-11-11: [DOCS] Update Arch installation instructions
2022-11-11: [BUGFIX] Fix infinite recursion error with decorated widget configuration
2022-11-11: [BUGFIX] Fix `RectDecoration` clipping when widget is resized
2022-11-11: [BUGFIX] Fix menu position for `StatusNotifier` and `GlobalMenu` widgets
2022-11-10: [BUGFIX] Better handling of decorations on mirrored widgets
2022-11-10: [BUGFIX] Fix `Visualiser` segfault
2022-11-08: [FEATURE] Add improvements to `StatusNotifier` menus
2022-11-07: [FEATURE] Add ability to resize icons in `ALSAWidget` 
2022-11-06: [BUGFIX] `WiFiIcon` internet check handles other exceptions
2022-11-05: [BUGFIX] Hide `LiveFootballScores` widget when no match
2022-11-01: [BUGFIX] Fix `StatusNotifier` menu bug where submenus do not appear
2022-10-27: [BUGFIX] Fix Graph widgets to work with decorations
2022-10-26: [FEATURE] `WiFiIcon`: Disable background internet check by default
2022-10-25: [BUGFIX] Fix padding in `TooltipMixin`
2022-10-25: [FEATURE] Allow overriding of colours for `PowerLineDecoration`
2022-10-20: [FEATURE] `WiFiIcon`: Add ability to always show SSID